@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2009-01-18  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/bond.cc: one more double bond position fix.
+	* libs/gcp/fragment.cc: always replace main atom when its symbol is gone.
+
 2009-01-11  Jean Bréfort  <jean.brefort@normalesup.org>
 	* AUTHORS: added brasilian translator.
 	* Makefile.am: added COPYING-LIBS (for canvas library).
